--- a/generator/templates/basic-ts/package.json
+++ b/generator/templates/basic-ts/package.json
@@ -34,13 +34,15 @@
     "build": "tsx esbuild.config.ts",
     "clean": "del-cli .turbo dist coverage",
     "dev": "tsx esbuild.config.ts --watch",
-    "test": "vitest run",
+    "test": "vitest run --coverage",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@templ/config": "workspace:*",
     "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.14.13",
+    "@vitest/coverage-v8": "^1.6.0",
+    "del-cli": "^5.1.0",
     "esbuild": "^0.20.2",
     "tsx": "^4.16.5",
     "typescript": "^5.5.4",
