--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "npm": ">=8"
   },
   "scripts": {
+    "postinstall": "pnpm exec playwright install --with-deps",
     "build": "next build",
     "clean": "del-cli .next .turbo test-results",
     "dev": "next dev --port=3001",
@@ -44,7 +45,9 @@
     "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.14.13",
     "@types/react": "^18.3.3",
+    "@vitest/coverage-v8": "^1.6.0",
     "autoprefixer": "^10.4.19",
+    "del-cli": "^5.1.0",
     "postcss": "^8.4.40",
     "std-env": "^3.7.0",
     "tailwindcss": "^3.4.7",
