--- a/package.json
+++ b/package.json
@@ -26,35 +26,28 @@
   },
   "scripts": {
     "prepare": "husky",
-    "postinstall": "pnpm exec playwright install --with-deps",
+    "build": "pnpm run clean && turbo run build",
+    "clean": "pnpm run -r clean",
+    "clean:all": "pnpm run clean && node ./scripts/src/clean.mjs",
     "deps:update": "taze -r -w -i -f -l",
-    "build": "pnpm clean && turbo run build",
-    "clean": "pnpm -r run clean",
     "dev": "turbo run dev --parallel",
-    "clean:all": "pnpm clean && node ./scripts/src/cleanNM.mjs",
-    "check": "turbo lint typecheck && pnpm --filter=scripts build:check automd",
-    "lint:fix": "turbo run lint:fix",
+    "check": "pnpm run lint && pnpm run typecheck && pnpm run --filter=scripts build:check automd",
     "lint": "eslint . --fix",
-    "validate": "pnpm deps:update && pnpm lint && pnpm build && pnpm test",
     "release": "changeset version && npm publish && git push --follow-tags",
-    "test": "turbo run test --force",
-    "test:ci": "vitest run --coverage",
-    "test:e2e": "turbo run test:e2e",
-    "test:e2e:ui": "turbo run test:e2e:ui",
-    "typecheck": "turbo run typecheck"
+    "test": "pnpm run -r test",
+    "test:e2e": "pnpm run -r test:e2e",
+    "test:e2e:ui": "pnpm run -r test:e2e:ui",
+    "typecheck": "pnpm run -r typecheck",
+    "validate": "pnpm run deps:update && pnpm run clean && pnpm run build && pnpm run check && pnpm run test"
   },
   "devDependencies": {
     "@antfu/eslint-config": "2.24.1",
     "@changesets/cli": "^2.27.7",
-    "@vitest/coverage-v8": "^1.6.0",
-    "del-cli": "^5.1.0",
     "eslint": "^8.57.0",
     "eslint-plugin-vitest": "^0.5.4",
     "husky": "^9.1.4",
     "knip": "^5.27.0",
-    "playwright": "^1.45.3",
     "taze": "^0.13.9",
-    "turbo": "^2.0.11",
-    "vitest": "^1.6.0"
+    "turbo": "^2.0.11"
   }
 }
