--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -32,10 +32,10 @@
   },
   "scripts": {
     "build": "tsx esbuild.config.ts",
-    "clean": "del-cli .turbo dist",
+    "clean": "del-cli .turbo dist coverage",
     "dev": "tsx ./src/index",
     "api:load": "tsx ./test/api.load.ts",
-    "test": "vitest run",
+    "test": "vitest run --coverage",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -50,7 +50,9 @@
     "@templ/tsconfig": "workspace:*",
     "@types/autocannon": "^7.12.5",
     "@types/node": "^20.14.13",
+    "@vitest/coverage-v8": "^1.6.0",
     "autocannon": "^7.15.0",
+    "del-cli": "^5.1.0",
     "esbuild": "^0.20.2",
     "tsx": "^4.16.5",
     "typescript": "^5.5.4",
