--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -32,9 +32,9 @@
   },
   "scripts": {
     "build": "tsx esbuild.config.ts",
-    "clean": "del-cli .turbo dist",
+    "clean": "del-cli .turbo dist coverage",
     "dev": "tsx esbuild.config.ts --watch",
-    "test": "vitest run",
+    "test": "vitest run --coverage",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -46,6 +46,8 @@
     "@templ/config": "workspace:*",
     "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.14.13",
+    "@vitest/coverage-v8": "^1.6.0",
+    "del-cli": "^5.1.0",
     "esbuild": "^0.20.2",
     "tsx": "^4.16.5",
     "typescript": "^5.5.4",
