--- a/turbo.json
+++ b/turbo.json
@@ -14,23 +14,6 @@
       "persistent": true,
       "inputs": ["**/*.test.{ts,tsx}"]
     },
-    "test:e2e": {},
-    "test:e2e:ui": {},
-    "check": {
-      "cache": false
-    },
-    "lint": {
-      "cache": false,
-      "outputs": []
-    },
-    "lint:fix": {
-      "cache": false,
-      "outputs": []
-    },
-    "test": {
-      "cache": false,
-      "outputs": []
-    },
-    "typecheck": {}
+    "check": {}
   }
 }
