--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -23,10 +23,6 @@ runs:
       shell: bash
       run: echo "${{ toJson(steps.resolve-package-versions.outputs) }}"
 
-    - name: Install ni
-      shell: bash
-      run: npm i -g @antfu/ni
-
     - name: Clean install
       shell: bash
-      run: nci
+      run: pnpm install
