--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -45,9 +45,9 @@
     "@templ/tsconfig": "workspace:*",
     "@types/node": "^20.14.13",
     "@types/react": "^18.3.3",
-    "@vitest/coverage-v8": "^1.6.0",
     "autoprefixer": "^10.4.19",
     "del-cli": "^5.1.0",
+    "playwright": "^1.45.3",
     "postcss": "^8.4.40",
     "std-env": "^3.7.0",
     "tailwindcss": "^3.4.7",
