chore: playwright releated updates

--- a/package.json
+++ b/package.json
@@ -34,9 +34,8 @@
     "check": "pnpm run lint && pnpm run typecheck && pnpm run --filter=scripts build:check automd",
     "lint": "eslint . --fix",
     "release": "changeset version && npm publish && git push --follow-tags",
-    "test": "pnpm run -r test",
-    "test:e2e": "pnpm run -r test:e2e",
-    "test:e2e:ui": "pnpm run -r test:e2e:ui",
+    "test": "turbo run test",
+    "test:e2e": "pnpm -C apps/admin test:e2e && pnpm -C apps/web test:e2e",
     "typecheck": "pnpm run -r typecheck",
     "validate": "pnpm run deps:update && pnpm run clean && pnpm run build && pnpm run check && pnpm run test"
   },
