--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,18 +73,25 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
 
+      - name: Playwright Deps
+        run: pnpm exec playwright install --with-deps
+
       - name: 👷 Build
-        run: pnpm run build
+        run: |
+          pnpm -C apps/admin build
+          pnpm -C apps/web build
 
       - name: 🌐 E2E Test
-        run: pnpm -C apps/web test:e2e
+        run: pnpm test:e2e
 
-      # - uses: actions/upload-artifact@v4
-      #   if: always()
-      #   with:
-      #     name: playwright-report
-      #     path: artifacts/e2e/reports
-      #     retention-days: 30
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: |
+            artifacts/@templ/admin/e2e-report/index.html
+            artifacts/@templ/web/e2e-report/index.html
+          retention-days: 30
 
   test:
     runs-on: ${{ matrix.os }}
@@ -102,9 +109,6 @@ jobs:
 
       - name: 🧪 Unit Test
         run: pnpm run test
-
-      - name: Install Storybook Deps
-        run: pnpm exec playwright install --with-deps
 
       - name: 📚 Storybook build
         run: pnpm run -C packages/ui build
