--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,8 @@
       "persistent": true,
       "inputs": ["**/*.test.{ts,tsx}"]
     },
-    "check": {}
+    "test": {
+      "dependsOn": ["^build"]
+    }
   }
 }
