--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -99,6 +99,7 @@
     "concurrently": "^8.2.2",
     "date-fns": "^3.6.0",
     "lucide-react": "0.363.0",
+    "playwright": "^1.45.3",
     "serve": "^14.2.3",
     "storybook": "^8.2.7",
     "storybook-dark-mode": "^4.0.2",
