--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "yarn": ">=3"
   },
   "scripts": {
+    "postinstall": "npx playwright install --with-deps",
     "prepare": "husky",
     "build": "pnpm run clean && turbo run build",
     "clean": "pnpm run -r clean",
@@ -46,6 +47,7 @@
     "eslint-plugin-vitest": "^0.5.4",
     "husky": "^9.1.4",
     "knip": "^5.27.0",
+    "playwright": "^1.45.3",
     "taze": "^0.13.9",
     "turbo": "^2.0.11"
   }
